# askdoc

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  architecture.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: chat.py  documents.py
app/core/: config.py
app/db/: base.py  session.py
app/models/: models.py
app/schemas/: chat.py  document.py
app/services/: document_service.py  prompts.py  qa_service.py
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css
frontend/src/components/: ChatView.tsx  Composer.tsx  Header.tsx  Markdown.tsx  MessageItem.tsx  Sidebar.tsx  UploadView.tsx
migrations/: env.py
migrations/versions/: ef3ac8d40d65_initial_migration.py
vector_store/: index.faiss  metadata.pkl
